<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuItemCalendar"
        android:icon="@mipmap/calendar"
        android:title="@string/calendar"/>
    <item android:id="@+id/menuItemProfile"
        android:icon="@mipmap/profile"
        android:title="@string/profile"/>
    <item android:id="@+id/menuItemSupport"
        android:icon="@mipmap/support"
        android:title="@string/support"/>
    <item android:id="@+id/menuItemAbout"
        android:icon="@mipmap/about"
        android:title="@string/about"/>
    <item android:id="@+id/menuItemEvent"
        android:icon="@mipmap/about"
        android:title="@string/event"
        android:onClick="EventClicked"/>
    <item android:title="@string/others">
        <menu>
            <item android:id="@+id/signoutItemProfile"
                android:icon="@mipmap/logout"
                android:onClick="LogoutClicked"
                android:title="Logout"/>
        </menu>
    </item>
</menu>